2010-06-11  Stephen Eglen  <stephen@gnu.org>

	* shell.el: Bind `shell-resync-dirs' to M-RET.

2010-06-10  Michael Albinus  <michael.albinus@gmx.de>

	* notifications.el: Move file from lisp/net, because it is
	supposed to talk locally to the user.

2010-06-10  Julien Danjou  <julien@danjou.info>

	* net/notifications.el (notifications-on-action-signal)
	(notifications-on-closed-signal): Pass notification id as first
	argument to the callback functions. Add docstrings.
	(notifications-notify): Fix docstring.

2010-06-10  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-ignored-files)
	(authors-valid-file-names): Add some files.

2010-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/rcirc.el (rcirc-server-alist, rcirc, rcirc-connect): Resolve
	merge conflict, giving preference to the emacs-23 version of the code.

2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/advice.el (ad-compile-function):
	Define warning-suppress-types before we let-bind it (bug#6275).

	* vc-dispatcher.el: Rename mode-line-hook to vc-mode-line-hook;
	declare it, make it buffer-local and permanent-local (bug#6324).
	(vc-resynch-window): Adjust name.
	* vc-hooks.el (vc-find-file-hook): Adjust name.

2010-06-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/notifications.el (notifications-notify): Fix docstring.

2010-06-09  Juanma Barranquero  <lekktu@gmail.com>

	Update to Unicode 6.0.0 beta.
	* international/charprop.el: Update copyright.
	* international/mule-cmds.el (ucs-names): Update character ranges.
	* international/uni-bidi.el:
	* international/uni-category.el:
	* international/uni-combining.el:
	* international/uni-comment.el:
	* international/uni-decimal.el:
	* international/uni-decomposition.el:
	* international/uni-digit.el:
	* international/uni-lowercase.el:
	* international/uni-mirrored.el:
	* international/uni-name.el:
	* international/uni-numeric.el:
	* international/uni-old-name.el:
	* international/uni-titlecase.el: