@@ -1,3 +1,7 @@
+2010-06-11  Chong Yidong  <cyd@stupidchicken.com>
+
+	* comint-testsuite.el: New file.
+
 2010-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* indent: New dir.
